Add notes on setting module options